# PyDynSys

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  lorenz_bif2d.py  lorenz_le2d.py  luchen_bif1d.py  luchen_bif2d.py  luchen_le2d.py  pyproject.toml  requirements.txt  setup.py
backend/: CMakeLists.txt
backend/include/backend/cpu/: integrator_cpu.hpp
backend/src/cpu/: integrator.cpp  lu_chen.S
dynsys/: _dynsys.pyi  dsl.py  model.py
include/: enums.hpp  simulation.hpp  try_jit.hpp
src/: bindings.cpp  jit.cpp  jit.hpp  simulation.cpp
